--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase02_02",
+  "name": "clase03_tarea",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "bootstrap": "^5.0.1",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
